prints to convert to kmc

--- a/ml/image_compression/image_compression.ipynb
+++ b/ml/image_compression/image_compression.ipynb
@@ -660,39 +660,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "80f5cec5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Palette Color #0\n",
-      "[[115  64 109]\n",
-      " [115  64 109]\n",
-      " [115  64 109]]\n",
-      "\n",
-      "Palette Color #1\n",
-      "[[161 149 136]\n",
-      " [161 149 136]\n",
-      " [161 149 136]]\n",
-      "\n",
-      "Palette Color #2\n",
-      "[[51 31 19]\n",
-      " [51 31 19]\n",
-      " [51 31 19]]\n",
-      "\n",
-      "Palette Color #3\n",
-      "[[247  64  82]\n",
-      " [247  64  82]\n",
-      " [247  64  82]]\n",
-      "\n",
-      "Palette Color #4\n",
-      "[[116  97  83]\n",
-      " [116  97  83]\n",
-      " [116  97  83]]\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'palette' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# That worked, so now let's create 32 of these blocks, one for each color in our palette\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m blocks \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39mfull([\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m3\u001b[39m], color) \u001b[38;5;28;01mfor\u001b[39;00m color \u001b[38;5;129;01min\u001b[39;00m \u001b[43mpalette\u001b[49m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPalette Color #\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'palette' is not defined"
      ]
     }
    ],
@@ -1330,7 +1310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
