--- a/ml/kmeans/putting_k_in_kmeans.ipynb
+++ b/ml/kmeans/putting_k_in_kmeans.ipynb
@@ -481,17 +481,17 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "f, axis = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "f, axis = plt.subplots(1, 2, figsize=(15, 5))\n",
     "\n",
     "ax1 = axis[0]\n",
-    "ax2 = axis[1]\n",
-    "ax3 = axis[2]\n",
+    "# ax2 = axis[1]\n",
+    "ax3 = axis[1]\n",
     "\n",
     "ax1.set_title(\"Original Data\")\n",
     "ax1.scatter(X[:,0], X[:,1], c=y)\n",
     "\n",
-    "ax2.set_title(\"WSSE Elbow\")\n",
-    "ax2.plot(results[:,0], results[:,1])\n",
+    "# ax2.set_title(\"WSSE Elbow\")\n",
+    "# ax2.plot(results[:,0], results[:,1])\n",
     "\n",
     "ax3.set_title(f\"Labeled Data (clusters: {cluster_count})\")\n",
     "ax3.scatter(x=X[:,0], y=X[:,1], c=clusters)\n",
