added notes to cluster

--- a/ml/dbscan/Cluster Evaluation Metrics.ipynb
+++ b/ml/dbscan/Cluster Evaluation Metrics.ipynb
@@ -634,7 +634,13 @@
     "I started with overlapping aranges and averaging scores for each range, then returning the total average score (averaging the averages) at the very end\n",
     "- did well on all except the claw marks\n",
     "### How to use?\n",
-    "Run all cells and then comment in/out the X variable to test by plots"
+    "Run all cells and then comment in/out the X variable to test by plots\n",
+    "\n",
+    "---\n",
+    "Notes to do better on:\n",
+    "- did not normalize the raw data\n",
+    "- did not normalize the scores (each score has a different range - like calinski being in the 1000s)\n",
+    "- go through different neighbor amounts other than 4"
    ]
   },
   {
